--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@ body{
 </section>
 
 <section class="gallery" id="gallery"></section>
+  <section class="about">
+  <h2>About Zyra Graphics</h2>
+  <p>
+    I help brands and creators stand out through motion-driven design,
+    combining visuals and code to build unforgettable digital experiences.
+  </p>
+  </section>
 
 <a href="https://wa.me/917385009275" class="whatsapp">WhatsApp</a>
 
