--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Zyra Graphics</title>
 
 <style>
@@ -19,9 +20,10 @@ body{
   overflow-x:hidden;
 }
 
+/* Custom Cursor */
 .cursor{
-  width:20px;
-  height:20px;
+  width:18px;
+  height:18px;
   border:2px solid #fff;
   border-radius:50%;
   position:fixed;
@@ -30,75 +32,107 @@ body{
   transition:0.1s;
 }
 
+/* HERO */
 .hero{
   height:100vh;
+  padding:40px 20px;
   display:flex;
   flex-direction:column;
   justify-content:center;
   align-items:center;
+  text-align:center;
   background:radial-gradient(circle at center,#111,#000);
 }
 
 .brand{
-  font-size:4rem;
-  letter-spacing:3px;
+  font-size:2.8rem;
+  letter-spacing:2px;
   animation:glow 2s infinite alternate;
 }
 
-.tagline,.intro{
-  opacity:0;
-  margin-top:10px;
-}
-
 .tagline{
+  margin-top:10px;
+  font-size:1rem;
+  opacity:0;
   animation:slideUp 1s forwards;
   animation-delay:1s;
 }
 
 .intro{
+  margin-top:8px;
+  font-size:0.9rem;
+  opacity:0;
   animation:slideUp 1s forwards;
   animation-delay:2s;
 }
 
+/* MENU */
 .menu{
   display:flex;
-  justify-content:space-around;
-  padding:100px 20px;
+  flex-direction:column;
+  gap:25px;
+  padding:60px 20px;
 }
 
 .card{
-  padding:40px 60px;
+  width:100%;
+  padding:25px;
   border:1px solid #fff;
+  border-radius:12px;
+  text-align:center;
+  font-size:1.1rem;
   transition:0.3s;
-  font-size:1.2rem;
 }
 
 .card:hover{
   background:#fff;
   color:#000;
-  transform:scale(1.1);
+  transform:scale(1.05);
 }
 
+/* GALLERY */
 .gallery{
   display:grid;
-  grid-template-columns:repeat(3,1fr);
+  grid-template-columns:1fr;
   gap:20px;
-  padding:50px;
+  padding:40px 20px;
 }
 
 .gallery img{
   width:100%;
+  border-radius:12px;
   opacity:0;
-  transform:scale(0.8);
-  animation:reveal 0.8s forwards;
+  transform:scale(0.9);
+  animation:reveal 0.6s forwards;
 }
 
+/* ABOUT */
+.about{
+  padding:120px 20px;
+  text-align:center;
+  background:#050505;
+}
+
+.about h2{
+  font-size:2rem;
+  margin-bottom:15px;
+}
+
+.about p{
+  max-width:600px;
+  margin:auto;
+  line-height:1.6;
+  color:#aaa;
+  font-size:0.95rem;
+}
+
+/* FLOATING BUTTONS */
 .whatsapp{
   position:fixed;
   bottom:20px;
   right:20px;
   background:#25D366;
-  padding:15px 30px;
+  padding:14px 24px;
   border-radius:50px;
   color:#000;
   text-decoration:none;
@@ -106,6 +140,34 @@ body{
   animation:pulse 2s infinite;
 }
 
+.instagram{
+  position:fixed;
+  bottom:80px;
+  right:20px;
+  background:#fff;
+  color:#000;
+  padding:12px 22px;
+  border-radius:50px;
+  text-decoration:none;
+  font-weight:bold;
+  animation:pulse 2s infinite;
+}
+
+/* DESKTOP UPGRADE */
+@media(min-width:900px){
+  .menu{
+    flex-direction:row;
+    justify-content:space-around;
+  }
+  .gallery{
+    grid-template-columns:repeat(3,1fr);
+  }
+  .brand{
+    font-size:4rem;
+  }
+}
+
+/* ANIMATIONS */
 @keyframes glow{
   from{text-shadow:0 0 10px #fff;}
   to{text-shadow:0 0 30px #00f;}
@@ -144,25 +206,27 @@ body{
 </section>
 
 <section class="gallery" id="gallery"></section>
-  <section class="about">
+
+<section class="about">
   <h2>About Zyra Graphics</h2>
   <p>
     I help brands and creators stand out through motion-driven design,
     combining visuals and code to build unforgettable digital experiences.
   </p>
-  </section>
+</section>
 
+<a href="https://instagram.com/xxxxxxxxxxxxx" class="instagram">Instagram</a>
 <a href="https://wa.me/917385009275" class="whatsapp">WhatsApp</a>
 
 <script>
-// Custom Cursor
+// Cursor
 const cursor = document.querySelector(".cursor");
 document.addEventListener("mousemove", e=>{
   cursor.style.left = e.clientX+"px";
   cursor.style.top = e.clientY+"px";
 });
 
-// Open Gallery
+// Gallery
 function openGallery(folder){
   const gallery = document.getElementById("gallery");
   gallery.innerHTML = "";
