--- a/index.html
+++ b/index.html
@@ -4,243 +4,161 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Zyra Graphics</title>
-
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  cursor:none;
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #000;
+  color: #fff;
+  overflow-x: hidden;
 }
 
-body{
-  background:#000;
-  color:#fff;
-  font-family:Arial, sans-serif;
-  overflow-x:hidden;
+/* Hero Section */
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+  padding: 20px;
+}
+.hero h1 {
+  font-size: 2.8rem;
+  color: #fff;
+  text-shadow: 0 0 10px #fff;
+  animation: fadeIn 1.5s ease forwards;
+}
+.hero p {
+  font-size: 1rem;
+  color: #ccc;
+  margin-top: 10px;
+  animation: fadeIn 2s ease forwards;
 }
 
-/* Custom Cursor */
-.cursor{
-  width:18px;
-  height:18px;
-  border:2px solid #fff;
-  border-radius:50%;
-  position:fixed;
-  pointer-events:none;
-  z-index:999;
-  transition:0.1s;
+/* Buttons */
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 30px;
+  flex-wrap: wrap;
+}
+.buttons button {
+  padding: 12px 20px;
+  background: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.buttons button:hover {
+  background: #fff;
+  color: #000;
 }
 
-/* HERO */
-.hero{
-  height:100vh;
-  padding:40px 20px;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  background:radial-gradient(circle at center,#111,#000);
+/* Gallery */
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin: 40px 10px;
+}
+.gallery img {
+  width: 45%;
+  max-width: 200px;
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+}
+.gallery img:hover {
+  transform: scale(1.05);
 }
 
-.brand{
-  font-size:2.8rem;
-  letter-spacing:2px;
-  animation:glow 2s infinite alternate;
+/* About */
+.about {
+  text-align: center;
+  margin: 50px 20px;
+  font-size: 0.95rem;
+  color: #ccc;
 }
 
-.tagline{
-  margin-top:10px;
-  font-size:1rem;
-  opacity:0;
-  animation:slideUp 1s forwards;
-  animation-delay:1s;
+/* Social Buttons */
+.social {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.social a {
+  padding: 10px 15px;
+  background: #25d366;
+  color: #fff;
+  border-radius: 50px;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
 }
 
-.intro{
-  margin-top:8px;
-  font-size:0.9rem;
-  opacity:0;
-  animation:slideUp 1s forwards;
-  animation-delay:2s;
+/* Animations */
+@keyframes fadeIn {
+  0% {opacity: 0; transform: translateY(20px);}
+  100% {opacity: 1; transform: translateY(0);}
 }
 
-/* MENU */
-.menu{
-  display:flex;
-  flex-direction:column;
-  gap:25px;
-  padding:60px 20px;
-}
-
-.card{
-  width:100%;
-  padding:25px;
-  border:1px solid #fff;
-  border-radius:12px;
-  text-align:center;
-  font-size:1.1rem;
-  transition:0.3s;
-}
-
-.card:hover{
-  background:#fff;
-  color:#000;
-  transform:scale(1.05);
-}
-
-/* GALLERY */
-.gallery{
-  display:grid;
-  grid-template-columns:1fr;
-  gap:20px;
-  padding:40px 20px;
-}
-
-.gallery img{
-  width:100%;
-  border-radius:12px;
-  opacity:0;
-  transform:scale(0.9);
-  animation:reveal 0.6s forwards;
-}
-
-/* ABOUT */
-.about{
-  padding:120px 20px;
-  text-align:center;
-  background:#050505;
-}
-
-.about h2{
-  font-size:2rem;
-  margin-bottom:15px;
-}
-
-.about p{
-  max-width:600px;
-  margin:auto;
-  line-height:1.6;
-  color:#aaa;
-  font-size:0.95rem;
-}
-
-/* FLOATING BUTTONS */
-.whatsapp{
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  background:#25D366;
-  padding:14px 24px;
-  border-radius:50px;
-  color:#000;
-  text-decoration:none;
-  font-weight:bold;
-  animation:pulse 2s infinite;
-}
-
-.instagram{
-  position:fixed;
-  bottom:80px;
-  right:20px;
-  background:#fff;
-  color:#000;
-  padding:12px 22px;
-  border-radius:50px;
-  text-decoration:none;
-  font-weight:bold;
-  animation:pulse 2s infinite;
-}
-
-/* DESKTOP UPGRADE */
-@media(min-width:900px){
-  .menu{
-    flex-direction:row;
-    justify-content:space-around;
+@media(min-width: 768px){
+  .gallery img{
+    width: 180px;
   }
-  .gallery{
-    grid-template-columns:repeat(3,1fr);
+  .hero h1{
+    font-size: 3.5rem;
   }
-  .brand{
-    font-size:4rem;
+  .hero p{
+    font-size: 1.2rem;
   }
-}
-
-/* ANIMATIONS */
-@keyframes glow{
-  from{text-shadow:0 0 10px #fff;}
-  to{text-shadow:0 0 30px #00f;}
-}
-
-@keyframes slideUp{
-  to{opacity:1; transform:translateY(-10px);}
-}
-
-@keyframes reveal{
-  to{opacity:1; transform:scale(1);}
-}
-
-@keyframes pulse{
-  0%{transform:scale(1);}
-  50%{transform:scale(1.1);}
 }
 </style>
 </head>
-
 <body>
 
-<div class="cursor"></div>
+<!-- Hero -->
+<div class="hero">
+  <h1>Zyra Graphics</h1>
+  <p>Hi, I'm Umer — a graphic designer & web developer.</p>
+  <div class="buttons">
+    <button onclick="showGallery()">View Gallery</button>
+  </div>
+</div>
 
-<section class="hero">
-  <h1 class="brand">Zyra Graphics</h1>
-  <p class="tagline">Visuals that move. Designs that convert.</p>
-  <p class="intro">Hi, I’m Umer — a graphic designer & web developer.</p>
-</section>
+<!-- Gallery -->
+<div class="gallery" id="gallery"></div>
 
-<section class="menu">
-  <div class="card" onclick="openGallery('thumbnails')">Thumbnails</div>
-  <div class="card" onclick="openGallery('roaster')">Roaster Reveal</div>
-  <div class="card" onclick="openGallery('posters')">Posters</div>
-  <div class="card" onclick="openGallery('logos')">Logos</div>
-</section>
+<!-- About -->
+<div class="about">
+  <h2>About Us</h2>
+  <p>We create visuals that move. Professional posters, logos, and creative designs for brands & clients.</p>
+</div>
 
-<section class="gallery" id="gallery"></section>
-
-<section class="about">
-  <h2>About Zyra Graphics</h2>
-  <p>
-    I help brands and creators stand out through motion-driven design,
-    combining visuals and code to build unforgettable digital experiences.
-  </p>
-</section>
-
-<a href="https://instagram.com/xxxxxxxxxxxxx" class="instagram">Instagram</a>
-<a href="https://wa.me/917385009275" class="whatsapp">WhatsApp</a>
+<!-- Social -->
+<div class="social">
+  <a href="https://wa.me/7385009275" target="_blank">WhatsApp</a>
+  <a href="https://instagram.com/xxxxxxxxxxxxx" target="_blank">Instagram</a>
+</div>
 
 <script>
-// Cursor
-const cursor = document.querySelector(".cursor");
-document.addEventListener("mousemove", e=>{
-  cursor.style.left = e.clientX+"px";
-  cursor.style.top = e.clientY+"px";
-});
+const gallery = document.getElementById('gallery');
+const totalImages = 20; // Total images uploaded in /images folder
 
-// Gallery
-function openGallery(folder){
-  const gallery = document.getElementById("gallery");
-  gallery.innerHTML = "";
-
-  for(let i=1;i<=5;i++){
-    const img = document.createElement("img");
-    img.src = `images/${folder}/${i}.jpg`;
+function showGallery(){
+  gallery.innerHTML = '';
+  for(let i=1; i<=totalImages; i++){
+    const img = document.createElement('img');
+    img.src = `images/${i}.jpg`; // images folder ke andar directly
     gallery.appendChild(img);
   }
-
-  window.scrollTo({
-    top: gallery.offsetTop,
-    behavior:"smooth"
-  });
+  window.scrollTo({top: gallery.offsetTop, behavior: 'smooth'});
 }
 </script>
 
