--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zyra Graphics - Pro Portfolio</title>
+<title>Zyra Graphics - Ultra Pro Portfolio</title>
 <style>
-/* ===== Basic Body ===== */
+/* ===== Body ===== */
 body{
   margin:0;
   font-family:Arial,sans-serif;
   background:#000;
   color:#fff;
-  overflow-x:hidden;
   scroll-behavior:smooth;
+  overflow-x:hidden;
   cursor:none;
 }
 
@@ -42,7 +42,7 @@ body{
   animation:heroText 2s ease forwards;
 }
 
-/* Hero Gradient Background */
+/* Hero Gradient & Video Overlay */
 .hero::before{
   content:"";
   position:absolute;
@@ -54,7 +54,16 @@ body{
   z-index:-2;
 }
 
-/* Particles */
+/* Optional Video Background */
+.hero video{
+  position:absolute;
+  top:0; left:0;
+  width:100%; height:100%;
+  object-fit:cover;
+  z-index:-3;
+}
+
+/* Floating Particles */
 .particle{
   position:absolute;
   width:6px; height:6px;
@@ -62,6 +71,13 @@ body{
   border-radius:50%;
   opacity:0.6;
   animation:float 10s linear infinite;
+}
+
+/* Animated SVG Logo */
+#hero-logo{
+  width:120px; height:120px;
+  margin-bottom:15px;
+  animation:rotateGlow 4s infinite alternate;
 }
 
 /* Section Buttons */
@@ -88,15 +104,13 @@ body{
 
 /* Gallery */
 .gallery{
-  display:flex;
-  flex-wrap:wrap;
-  justify-content:center;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
   gap:10px;
   margin:20px 10px;
 }
 .gallery img{
-  width:45%;
-  max-width:180px;
+  width:100%;
   border-radius:5px;
   transition:transform 0.3s ease, box-shadow 0.3s ease;
   opacity:0;
@@ -115,7 +129,7 @@ body{
   top:0; left:0;
   width:100%;
   height:100%;
-  background:rgba(0,0,0,0.9);
+  background:rgba(0,0,0,0.95);
   display:none;
   justify-content:center;
   align-items:center;
@@ -238,17 +252,17 @@ body{
   justify-content:center;
   width:50px;
   height:50px;
-  background:#25d366;
   border-radius:50%;
   text-decoration:none;
   transition:0.3s;
 }
-.social a.instagram{background:#E1306C;}
 .social a img{
   width:25px;
   height:25px;
   filter:invert(1);
 }
+.social a.instagram{background:#E1306C;}
+.social a.whatsapp{background:#25d366;}
 .social a:hover{
   transform:scale(1.2);
   box-shadow:0 0 15px #fff;
@@ -293,7 +307,7 @@ body{
   z-index:9999;
 }
 
-/* ===== Animations ===== */
+/* Animations */
 @keyframes heroText{
   0%{opacity:0; transform:translateY(20px);}
   100%{opacity:1; transform:translateY(0);}
@@ -316,6 +330,10 @@ body{
   0%{opacity:0;}
   100%{opacity:1;}
 }
+@keyframes rotateGlow{
+  0%{transform:rotate(0deg); filter:drop-shadow(0 0 5px #fff);}
+  100%{transform:rotate(360deg); filter:drop-shadow(0 0 20px #0ff);}
+}
 
 /* Responsive */
 @media(min-width:768px){
@@ -329,6 +347,10 @@ body{
 
 <!-- Hero -->
 <div class="hero">
+  <svg id="hero-logo" viewBox="0 0 100 100">
+    <circle cx="50" cy="50" r="40" stroke="#fff" stroke-width="5" fill="none"/>
+    <text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="12">Zyra</text>
+  </svg>
   <h1>Zyra Graphics</h1>
   <p>Hi, I'm Umer — a graphic designer & web developer.</p>
 
@@ -399,7 +421,7 @@ body{
 
 <!-- Social Icons -->
 <div class="social">
-  <a href="https://wa.me/7385009275" target="_blank">
+  <a href="https://wa.me/7385009275" target="_blank" class="whatsapp">
     <img src="icons/whatsapp.svg" alt="WhatsApp">
   </a>
   <a href="https://instagram.com/xxxxxxxxxxxxx" target="_blank" class="instagram">
@@ -456,7 +478,7 @@ document.addEventListener('mousemove',e=>{
   cursor.style.transform=`translate(${e.clientX}px, ${e.clientY}px)`;
 });
 
-// Floating Particles in Hero
+// Floating Particles
 for(let i=0;i<40;i++){
   let p=document.createElement('div');
   p.classList.add('particle');
