--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ body{
     <text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="12">Zyra</text>
   </svg>
   <h1>Zyra Graphics</h1>
-  <p>Hi, I'm Umer — a graphic designer & web developer.</p>
+  <p>Hi, I'm Umer Takildar — a graphic designer & web developer.</p>
 
   <!-- Section Buttons -->
   <div class="buttons">
