--- a/index.html
+++ b/index.html
@@ -3,354 +3,161 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zyra Graphics - Ultra Pro Portfolio</title>
+<title>Zyra Graphics</title>
 <style>
-/* ===== Body ===== */
+*{margin:0;padding:0;box-sizing:border-box}
 body{
-  margin:0;
-  font-family:Arial,sans-serif;
   background:#000;
   color:#fff;
-  scroll-behavior:smooth;
+  font-family:Arial,Helvetica,sans-serif;
   overflow-x:hidden;
-  cursor:none;
+  scroll-behavior:smooth;
 }
 
-/* ===== Hero Section ===== */
+/* HERO */
 .hero{
+  height:100vh;
   position:relative;
   display:flex;
   flex-direction:column;
   justify-content:center;
   align-items:center;
-  height:100vh;
   text-align:center;
   overflow:hidden;
-  padding:20px;
 }
-
-/* Hero Video Background */
 .hero video{
   position:absolute;
-  top:0; left:0;
-  width:100%; height:100%;
+  top:0;left:0;
+  width:100%;height:100%;
   object-fit:cover;
-  z-index:-3;
-}
-
-/* Hero Gradient Overlay (optional) */
-.hero::before{
-  content:"";
-  position:absolute;
-  top:0; left:0;
-  width:100%; height:100%;
-  background:linear-gradient(-45deg,#ff3cac,#784ba0,#2b86c5,#ff3cac);
-  background-size:400% 400%;
-  animation:gradientBG 15s ease infinite;
-  opacity:0.5;
   z-index:-2;
 }
-
+.hero::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:rgba(0,0,0,0.6);
+  z-index:-1;
+}
 .hero h1{
   font-size:3rem;
-  text-shadow:0 0 15px #fff;
-  opacity:0;
-  animation:heroText 1.5s ease forwards;
+  animation:fadeUp 1s forwards;
 }
 .hero p{
-  font-size:1rem;
-  color:#ccc;
   margin-top:10px;
-  opacity:0;
-  animation:heroText 2s ease forwards;
+  color:#ccc;
+  animation:fadeUp 1.5s forwards;
 }
-
-/* Animated SVG Logo */
-#hero-logo{
-  width:120px; height:120px;
-  margin-bottom:15px;
-  animation:rotateGlow 4s infinite alternate;
-}
-
-/* Section Buttons */
 .buttons{
-  display:flex;
-  justify-content:center;
-  gap:10px;
   margin-top:25px;
-  flex-wrap:wrap;
+  display:flex;
+  gap:10px;
 }
 .buttons button{
-  padding:10px 18px;
   background:transparent;
-  border:2px solid #fff;
   color:#fff;
+  border:2px solid #fff;
+  padding:10px 18px;
   cursor:pointer;
-  transition:0.3s;
+  transition:.3s;
 }
 .buttons button:hover{
   background:#fff;
   color:#000;
-  transform:scale(1.1);
 }
 
-/* Gallery */
+/* GALLERY */
 .gallery{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
   gap:10px;
-  margin:20px 10px;
+  padding:20px;
 }
-.gallery img, .gallery video{
+.gallery img{
   width:100%;
-  border-radius:5px;
-  transition:transform 0.3s ease, box-shadow 0.3s ease;
-  opacity:0;
+  border-radius:6px;
+  transition:.3s;
 }
-.gallery img.show, .gallery video.show{
-  animation:imgFade 0.8s forwards;
-}
-.gallery img:hover, .gallery video:hover{
-  transform:scale(1.05) rotateX(2deg);
+.gallery img:hover{
+  transform:scale(1.05);
   box-shadow:0 0 15px #fff;
 }
 
-/* Lightbox */
+/* LIGHTBOX */
 #lightbox{
   position:fixed;
-  top:0; left:0;
-  width:100%;
-  height:100%;
-  background:rgba(0,0,0,0.95);
+  inset:0;
+  background:rgba(0,0,0,.95);
   display:none;
   justify-content:center;
   align-items:center;
-  z-index:9999;
-  flex-direction:column;
+  z-index:999;
 }
-#lightbox img, #lightbox video{
+#lightbox img{
   max-width:90%;
-  max-height:80%;
-  border-radius:5px;
+  max-height:90%;
 }
 #lightbox span{
   position:absolute;
-  top:20px;
-  right:30px;
-  font-size:2rem;
+  top:20px;right:30px;
+  font-size:30px;
   cursor:pointer;
-  color:#fff;
 }
 
-/* About */
+/* ABOUT */
 .about{
+  padding:40px 20px;
   text-align:center;
-  margin:40px 20px;
-  font-size:0.95rem;
   color:#ccc;
 }
 
-/* Testimonials */
-.testimonials{
-  margin:40px 20px;
-  overflow:hidden;
-  position:relative;
-}
-.testimonial-slide{
-  display:flex;
-  transition:transform 0.5s ease;
-}
-.testimonial{
-  min-width:100%;
-  padding:20px;
-  box-sizing:border-box;
-  text-align:center;
-  opacity:0;
-  animation:testFade 1s forwards;
-}
-.testimonial h3{margin-bottom:10px;}
-
-/* Featured Projects */
-.projects{
-  margin:40px 10px;
-  display:flex;
-  justify-content:center;
-  flex-wrap:wrap;
-  gap:15px;
-}
-.project-card{
-  position:relative;
-  width:150px;
-  height:100px;
-  overflow:hidden;
-  border-radius:5px;
-  cursor:pointer;
-}
-.project-card img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  transition:transform 0.3s;
-}
-.project-card:hover img{
-  transform:scale(1.1);
-}
-.project-overlay{
-  position:absolute;
-  bottom:0; left:0;
-  width:100%;
-  background:rgba(0,0,0,0.7);
-  color:#fff;
-  padding:5px;
-  text-align:center;
-  font-size:0.85rem;
-  opacity:0;
-  transition:opacity 0.3s;
-}
-.project-card:hover .project-overlay{
-  opacity:1;
-}
-
-/* Blog / Tips */
-.blog{
-  margin:40px 20px;
-  display:flex;
-  flex-direction:column;
-  gap:15px;
-}
-.blog-item{
-  background:rgba(255,255,255,0.05);
-  padding:15px;
-  border-radius:5px;
-  transition:transform 0.3s, box-shadow 0.3s;
-}
-.blog-item:hover{
-  transform:scale(1.02);
-  box-shadow:0 0 15px #fff;
-}
-
-/* Social Icons */
+/* SOCIAL FLOAT */
 .social{
   position:fixed;
   bottom:20px;
   right:20px;
   display:flex;
   flex-direction:column;
-  gap:10px;
+  gap:12px;
   z-index:999;
 }
 .social a{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  width:50px;
-  height:50px;
+  width:55px;
+  height:55px;
   border-radius:50%;
-  text-decoration:none;
-  transition:0.3s;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:#111;
+  border:2px solid #fff;
+  transition:.3s;
 }
-.social a img{
-  width:25px;
-  height:25px;
-  filter:invert(1);
-}
-.social a.instagram{background:#E1306C;}
-.social a.whatsapp{background:#25d366;}
 .social a:hover{
   transform:scale(1.2);
-  box-shadow:0 0 15px #fff;
+  box-shadow:0 0 20px #fff;
+}
+.social svg{
+  width:28px;
+  height:28px;
+  fill:white;
 }
 
-/* CTA Buttons */
-.cta{
-  position:fixed;
-  left:20px;
-  bottom:20px;
-  display:flex;
-  flex-direction:column;
-  gap:10px;
-  z-index:999;
-}
-.cta button{
-  padding:10px 15px;
-  background:#fff;
-  border:none;
-  color:#000;
-  cursor:pointer;
-  border-radius:5px;
-  font-weight:bold;
-  transition:0.3s;
-}
-.cta button:hover{
-  transform:scale(1.1);
-  background:#25d366;
-  color:#fff;
-}
-
-/* Custom Cursor */
-.cursor{
-  position:fixed;
-  top:0; left:0;
-  width:15px; height:15px;
-  border-radius:50%;
-  background:#fff;
-  pointer-events:none;
-  transform:translate(-50%,-50%);
-  transition:transform 0.1s ease;
-  z-index:9999;
-}
-
-/* Animations */
-@keyframes heroText{
-  0%{opacity:0; transform:translateY(20px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-@keyframes gradientBG{
-  0%{background-position:0% 50%;}
-  50%{background-position:100% 50%;}
-  100%{background-position:0% 50%;}
-}
-@keyframes float{
-  0%{transform:translateY(0) translateX(0);}
-  50%{transform:translateY(-30px) translateX(20px);}
-  100%{transform:translateY(0) translateX(0);}
-}
-@keyframes imgFade{
-  0%{opacity:0; transform:translateY(20px);}
-  100%{opacity:1; transform:translateY(0);}
-}
-@keyframes testFade{
-  0%{opacity:0;}
-  100%{opacity:1;}
-}
-@keyframes rotateGlow{
-  0%{transform:rotate(0deg); filter:drop-shadow(0 0 5px #fff);}
-  100%{transform:rotate(360deg); filter:drop-shadow(0 0 20px #0ff);}
-}
-
-/* Responsive */
-@media(min-width:768px){
-  .gallery img, .gallery video{width:160px;}
-  .hero h1{font-size:3.5rem;}
-  .hero p{font-size:1.2rem;}
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(20px)}
+  to{opacity:1;transform:translateY(0)}
 }
 </style>
 </head>
 <body>
 
-<!-- Hero -->
+<!-- HERO -->
 <div class="hero">
   <video autoplay muted loop playsinline>
     <source src="videos/anime.mp4" type="video/mp4">
   </video>
-  <svg id="hero-logo" viewBox="0 0 100 100">
-    <circle cx="50" cy="50" r="40" stroke="#fff" stroke-width="5" fill="none"/>
-    <text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="12">Zyra</text>
-  </svg>
   <h1>Zyra Graphics</h1>
-  <p>Hi, I'm Umer — a graphic designer & web developer.</p>
+  <p>Hi, I'm Umer — Graphic Designer & Web Developer</p>
 
-  <!-- Section Buttons -->
   <div class="buttons">
     <button onclick="showSection('thumbnails')">Thumbnails</button>
     <button onclick="showSection('roaster')">Roaster Reveal</button>
@@ -359,164 +166,68 @@ body{
   </div>
 </div>
 
-<!-- Gallery -->
+<!-- GALLERY -->
 <div class="gallery" id="gallery"></div>
 
-<!-- Lightbox -->
-<div id="lightbox" onclick="closeLightbox()">
+<!-- LIGHTBOX -->
+<div id="lightbox" onclick="closeLB()">
   <span>&times;</span>
-  <div id="lightbox-content"></div>
+  <img id="lbImg">
 </div>
 
-<!-- About -->
+<!-- ABOUT -->
 <div class="about">
-  <h2>About Us</h2>
-  <p>We create visuals that move. Professional posters, logos, and creative designs for brands & clients.</p>
+  <h2>About Me</h2>
+  <p>I create premium visuals for brands — posters, logos, thumbnails & web designs.</p>
 </div>
 
-<!-- Testimonials -->
-<div class="testimonials">
-  <div class="testimonial-slide" id="testimonial-slide">
-    <div class="testimonial">
-      <h3>Client A</h3>
-      <p>"Amazing work! Highly recommend Zyra Graphics."</p>
-    </div>
-    <div class="testimonial">
-      <h3>Client B</h3>
-      <p>"Professional and creative designs delivered on time."</p>
-    </div>
-    <div class="testimonial">
-      <h3>Client C</h3>
-      <p>"Helped our brand look premium and modern."</p>
-    </div>
-  </div>
-</div>
-
-<!-- Featured Projects -->
-<div class="projects">
-  <div class="project-card">
-    <img src="images/1.jpg">
-    <div class="project-overlay">Project 1</div>
-  </div>
-  <div class="project-card">
-    <img src="images/2.jpg">
-    <div class="project-overlay">Project 2</div>
-  </div>
-  <div class="project-card">
-    <img src="images/3.jpg">
-    <div class="project-overlay">Project 3</div>
-  </div>
-</div>
-
-<!-- Blog / Tips -->
-<div class="blog">
-  <div class="blog-item">Design Tip 1: Keep it minimal for impact.</div>
-  <div class="blog-item">Design Tip 2: Use contrast to highlight.</div>
-  <div class="blog-item">Design Tip 3: Consistency is key.</div>
-</div>
-
-<!-- Social Icons -->
+<!-- SOCIAL ICONS (PURE SVG) -->
 <div class="social">
-  <a href="https://wa.me/7385009275" target="_blank" class="whatsapp">
-    <img src="icons/whatsapp.svg" alt="WhatsApp">
+  <a href="https://wa.me/7385009275" target="_blank">
+    <!-- WhatsApp SVG -->
+    <svg viewBox="0 0 448 512">
+      <path d="M380.9 97.1C339-3.9 227.5-33.1 136.5 8.8 55.6 45.5 13.8 130.6 32.2 217.3L0 480l271.4-69.5c69.7 12.6 138.8-17.7 180.6-75.7 43.4-59.5 48.9-138.3 14.1-198.7z"/>
+    </svg>
   </a>
-  <a href="https://instagram.com/xxxxxxxxxxxxx" target="_blank" class="instagram">
-    <img src="icons/instagram.svg" alt="Instagram">
+  <a href="https://instagram.com/xxxxxxxxxxxxx" target="_blank">
+    <!-- Instagram SVG -->
+    <svg viewBox="0 0 448 512">
+      <path d="M224 202.7A53.3 53.3 0 1 0 277.3 256 53.38 53.38 0 0 0 224 202.7z"/>
+      <path d="M448 80v352a80 80 0 0 1-80 80H80a80 80 0 0 1-80-80V80a80 80 0 0 1 80-80h288a80 80 0 0 1 80 80zM224 338a82 82 0 1 1 82-82 82.09 82.09 0 0 1-82 82zm85.4-148.1a19.4 19.4 0 1 1 19.4-19.4 19.42 19.42 0 0 1-19.4 19.4z"/>
+    </svg>
   </a>
 </div>
-
-<!-- CTA Buttons -->
-<div class="cta">
-  <button onclick="window.open('https://wa.me/7385009275')">WhatsApp</button>
-  <button>Hire Me</button>
-  <button>Get a Quote</button>
-</div>
-
-<!-- Custom Cursor -->
-<div class="cursor" id="cursor"></div>
 
 <script>
-// Sections & Gallery
-const gallery = document.getElementById('gallery');
+const gallery = document.getElementById("gallery");
+const lb = document.getElementById("lightbox");
+const lbImg = document.getElementById("lbImg");
+
 const sections = {
   thumbnails:[1,2,3,4,5],
   roaster:[6,7,8,9,10],
   posters:[11,12,13,14,15],
-  logos:[16,17,18,19,20]
+  logos:[16,17,18,19,20] // FIXED: logos now only images
 };
 
-function showSection(section){
-  gallery.innerHTML='';
-  sections[section].forEach(i=>{
-    if(i<=15){ // images
-      const img=document.createElement('img');
-      img.src=`images/${i}.jpg`;
-      img.classList.add('show');
-      img.onclick=()=>openLightbox(img.src,'img');
-      gallery.appendChild(img);
-    }else{ // videos for example
-      const vid=document.createElement('video');
-      vid.src='videos/anime.mp4';
-      vid.autoplay=true;
-      vid.muted=true;
-      vid.loop=true;
-      vid.classList.add('show');
-      vid.onclick=()=>openLightbox(vid.src,'video');
-      gallery.appendChild(vid);
-    }
+function showSection(sec){
+  gallery.innerHTML="";
+  sections[sec].forEach(i=>{
+    let img=document.createElement("img");
+    img.src=`images/${i}.jpg`;
+    img.onclick=()=>openLB(img.src);
+    gallery.appendChild(img);
   });
-  window.scrollTo({top:gallery.offsetTop, behavior:'smooth'});
+  window.scrollTo({top:gallery.offsetTop,behavior:"smooth"});
 }
 
-// Lightbox
-const lightbox=document.getElementById('lightbox');
-const lbContent=document.getElementById('lightbox-content');
-function openLightbox(src,type){
-  lightbox.style.display='flex';
-  lbContent.innerHTML='';
-  if(type==='img'){
-    const img=document.createElement('img');
-    img.src=src;
-    lbContent.appendChild(img);
-  }else{
-    const vid=document.createElement('video');
-    vid.src=src;
-    vid.controls=true;
-    vid.autoplay=true;
-    lbContent.appendChild(vid);
-  }
+function openLB(src){
+  lb.style.display="flex";
+  lbImg.src=src;
 }
-function closeLightbox(){
-  lightbox.style.display='none';
-  lbContent.innerHTML='';
+function closeLB(){
+  lb.style.display="none";
 }
-
-// Custom Cursor
-const cursor=document.getElementById('cursor');
-document.addEventListener('mousemove',e=>{
-  cursor.style.transform=`translate(${e.clientX}px, ${e.clientY}px)`;
-});
-
-// Floating Particles
-for(let i=0;i<40;i++){
-  let p=document.createElement('div');
-  p.classList.add('particle');
-  p.style.top=Math.random()*100+'%';
-  p.style.left=Math.random()*100+'%';
-  p.style.width=2+Math.random()*5+'px';
-  p.style.height=2+Math.random()*5+'px';
-  p.style.animationDuration=5+Math.random()*10+'s';
-  document.querySelector('.hero').appendChild(p);
-}
-
-// Testimonials Slider
-let tIndex=0;
-const tSlide=document.getElementById('testimonial-slide');
-setInterval(()=>{
-  tIndex++;
-  if(tIndex>=tSlide.children.length) tIndex=0;
-  tSlide.style.transform=`translateX(-${tIndex*100}%)`;
-},4000);
 </script>
 </body>
 </html>
