--- a/index.html
+++ b/index.html
@@ -4,241 +4,137 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Zyra Graphics</title>
+
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{
-  background:#000;
-  color:#fff;
-  font-family:Arial,Helvetica,sans-serif;
-  overflow-x:hidden;
-  scroll-behavior:smooth;
-}
+*{margin:0;padding:0;box-sizing:border-box;}
+body{background:#000;color:#fff;font-family:sans-serif;overflow-x:hidden}
 
 /* HERO */
-.hero{
-  height:100vh;
-  position:relative;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  overflow:hidden;
-}
-.hero video{
-  position:absolute;
-  inset:0;
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  z-index:-2;
-}
+.hero{height:100vh;position:relative;overflow:hidden}
+.hero video{width:100%;height:100%;object-fit:cover;filter:brightness(.5)}
 .hero::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:rgba(0,0,0,0.65);
-  z-index:-1;
+content:"";position:absolute;inset:0;
+background:radial-gradient(circle at center,transparent,black 70%);
 }
-.hero h1{
-  font-size:3rem;
-  animation:fadeUp 1s forwards;
+.hero-text{
+position:absolute;top:50%;left:50%;
+transform:translate(-50%,-50%);
+text-align:center;
+animation:heroText 3s ease forwards
 }
-.hero p{
-  margin-top:10px;
-  color:#ccc;
-  animation:fadeUp 1.5s forwards;
-}
-.buttons{
-  margin-top:25px;
-  display:flex;
-  gap:10px;
-}
-.buttons button{
-  background:transparent;
-  color:#fff;
-  border:2px solid #fff;
-  padding:10px 18px;
-  cursor:pointer;
-  transition:.3s;
-}
-.buttons button:hover{
-  background:#fff;
-  color:#000;
+.hero-text h1{font-size:42px;letter-spacing:4px}
+.hero-text p{opacity:.7;margin-top:6px}
+
+@keyframes heroText{
+from{opacity:0;transform:translate(-50%,-40%)}
+to{opacity:1;transform:translate(-50%,-50%)}
 }
 
-/* GALLERY */
-.gallery{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
-  gap:10px;
-  padding:20px;
-}
-.gallery img{
-  width:100%;
-  border-radius:6px;
-  transition:.3s;
-}
-.gallery img:hover{
-  transform:scale(1.05);
-  box-shadow:0 0 15px #fff;
-}
+/* SECTION */
+.section{padding:20px 10px}
+.section h2{text-align:center;margin:10px 0;font-size:20px}
 
-/* LIGHTBOX */
+/* GRID */
+.grid{display:grid;grid-template-columns:repeat(2,1fr);gap:8px}
+.card{overflow:hidden;border-radius:10px}
+.card img{width:100%;display:block;transition:.8s}
+.card img:hover{transform:scale(1.15);filter:brightness(1.2)}
+
+/* Lightbox */
 #lightbox{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.95);
-  display:none;
-  justify-content:center;
-  align-items:center;
-  z-index:999;
+position:fixed;inset:0;background:rgba(0,0,0,.95);
+display:none;align-items:center;justify-content:center
 }
-#lightbox img{
-  max-width:90%;
-  max-height:90%;
-}
-#lightbox .close{
-  position:absolute;
-  top:20px;right:30px;
-  font-size:32px;
-  cursor:pointer;
-  user-select:none;
-}
+#lightbox img{max-width:95%;max-height:95%}
 
-/* ABOUT */
-.about{
-  padding:40px 20px;
-  text-align:center;
-  color:#ccc;
+/* Social */
+.social{position:fixed;right:10px;bottom:10px;display:flex;flex-direction:column;gap:8px}
+.icon{
+width:42px;height:42px;border-radius:50%;
+background:#111;display:flex;align-items:center;justify-content:center;
+font-size:20px;text-decoration:none;color:#fff;
+animation:pulse 2s infinite
 }
-
-/* SOCIAL FLOAT */
-.social{
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  display:flex;
-  flex-direction:column;
-  gap:12px;
-  z-index:999;
-}
-.social a{
-  width:55px;
-  height:55px;
-  border-radius:50%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:#111;
-  border:2px solid #fff;
-  transition:.3s;
-}
-.social a:hover{
-  transform:scale(1.2);
-  box-shadow:0 0 20px #fff;
-}
-.social svg{
-  width:26px;
-  height:26px;
-  fill:white;
-}
-
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(20px)}
-  to{opacity:1;transform:translateY(0)}
+@keyframes pulse{
+0%{box-shadow:0 0 0 0 #00ffcc55}
+100%{box-shadow:0 0 0 12px transparent}
 }
 </style>
 </head>
+
 <body>
 
-<!-- HERO -->
+<!-- HERO VIDEO -->
 <div class="hero">
-  <video autoplay muted loop playsinline poster="images/hero.jpg">
-    <source src="videos/anime.mp4" type="video/mp4">
-  </video>
-  <h1>Zyra Graphics</h1>
-  <p>Hi, I'm Umer — Graphic Designer & Web Developer</p>
-
-  <div class="buttons">
-    <button onclick="showSection('thumbnails')">Thumbnails</button>
-    <button onclick="showSection('roaster')">Roaster Reveal</button>
-    <button onclick="showSection('posters')">Posters</button>
-    <button onclick="showSection('logos')">Logos</button>
-  </div>
+<video autoplay muted loop playsinline>
+<source src="videos/anime.mp4">
+</video>
+<div class="hero-text">
+<h1>Zyra Graphics</h1>
+<p>Designing Experiences</p>
+</div>
 </div>
 
-<!-- GALLERY -->
-<div class="gallery" id="gallery"></div>
-
-<!-- LIGHTBOX -->
-<div id="lightbox">
-  <div class="close" onclick="closeLB()">✕</div>
-  <img id="lbImg">
+<!-- THUMBNAILS -->
+<div class="section">
+<h2>Thumbnails</h2>
+<div class="grid" id="thumb"></div>
 </div>
 
-<!-- ABOUT -->
-<div class="about">
-  <h2>About Me</h2>
-  <p>I create premium visuals for brands — posters, logos, thumbnails & web designs.</p>
+<!-- POSTERS -->
+<div class="section">
+<h2>Posters</h2>
+<div class="grid" id="poster"></div>
 </div>
 
-<!-- SOCIAL -->
+<!-- ROSTER -->
+<div class="section">
+<h2>Roster Reveal</h2>
+<div class="grid" id="roster"></div>
+</div>
+
+<!-- LOGOS -->
+<div class="section">
+<h2>Logos</h2>
+<div class="grid" id="logo"></div>
+</div>
+
+<!-- Lightbox -->
+<div id="lightbox"><img></div>
+
+<!-- Social -->
 <div class="social">
-  <!-- WhatsApp -->
-  <a href="https://wa.me/7385009275" target="_blank">
-    <svg viewBox="0 0 32 32">
-      <path d="M16 3C9.4 3 4 8.1 4 14.4c0 2.6.9 5.1 2.5 7.1L4 29l7.8-2.4c1.9 1 4 1.5 6.2 1.5 6.6 0 12-5.1 12-11.4C30 8.1 24.6 3 16 3zm6.4 15.8c-.3.8-1.6 1.5-2.2 1.6-.6.1-1.3.2-4.3-.9-3.6-1.2-5.9-4.1-6.1-4.4-.2-.3-1.4-1.9-1.4-3.6s.9-2.6 1.3-3c.3-.4.7-.5 1-.5h.7c.2 0 .5-.1.8.6.3.7 1.1 2.6 1.2 2.8.1.2.1.4 0 .6-.1.2-.2.4-.4.6-.2.2-.4.4-.6.6-.2.2-.4.4-.2.8.2.4.9 1.5 2 2.4 1.4 1.2 2.6 1.6 3 .1.4-.2.6-.3.8-.6.2-.3.9-1.1 1.2-1.4.3-.3.5-.3.8-.2.3.1 2 .9 2.3 1 .3.1.5.2.6.4.1.2.1.8-.2 1.6z"/>
-    </svg>
-  </a>
-
-  <!-- Instagram -->
-  <a href="https://instagram.com/xxxxxxxxxxxxx" target="_blank">
-    <svg viewBox="0 0 24 24">
-      <path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zm-5 3.2A4.8 4.8 0 1 0 16.8 12 4.8 4.8 0 0 0 12 7.2zm0 7.8a3 3 0 1 1 3-3 3 3 0 0 1-3 3zm4.9-8.9a1.1 1.1 0 1 0 1.1 1.1 1.1 1.1 0 0 0-1.1-1.1z"/>
-    </svg>
-  </a>
+<a class="icon" href="https://instagram.com/xxxx">📸</a>
+<a class="icon" href="https://wa.me/917385009275">💬</a>
 </div>
 
 <script>
-const gallery = document.getElementById("gallery");
-const lb = document.getElementById("lightbox");
-const lbImg = document.getElementById("lbImg");
+const map=[
+{el:"thumb",start:1,end:5},
+{el:"poster",start:6,end:10},
+{el:"roster",start:11,end:15},
+{el:"logo",start:16,end:20}
+];
 
-const sections = {
-  thumbnails:[1,2,3,4,5],
-  roaster:[6,7,8,9,10],
-  posters:[11,12,13,14,15],
-  logos:[16,17,18,19,20]
+map.forEach(sec=>{
+let box=document.getElementById(sec.el);
+for(let i=sec.start;i<=sec.end;i++){
+let img=document.createElement("img");
+img.src="images/"+i+".jpg";
+img.onclick=()=>openLight(img.src);
+box.appendChild(img);
+}
+});
+
+function openLight(src){
+let l=document.getElementById("lightbox");
+l.style.display="flex";
+l.querySelector("img").src=src;
+}
+document.getElementById("lightbox").onclick=()=>{
+document.getElementById("lightbox").style.display="none";
 };
-
-function createImg(i){
-  let img=document.createElement("img");
-  img.loading="lazy";
-  img.src=`images/${i}.jpg`;
-  img.onerror=()=>img.src="images/hero.jpg";
-  img.onclick=()=>openLB(img.src);
-  return img;
-}
-
-function showSection(sec){
-  gallery.innerHTML="";
-  sections[sec].forEach(i=>{
-    gallery.appendChild(createImg(i));
-  });
-  window.scrollTo({top:gallery.offsetTop,behavior:"smooth"});
-}
-
-function openLB(src){
-  lb.style.display="flex";
-  lbImg.src=src;
-}
-function closeLB(){
-  lb.style.display="none";
-}
-
-/* Default load */
-showSection("thumbnails");
 </script>
+
 </body>
 </html>
